# im-project

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitignore.backup  1_deploy_middleware.py  2_init_db.py  3_deploy_services.py  AGENTS.md  CLAUDE.md  Makefile  README.en.md  README.md  deploy.py  deploy_utils.py  distill_completion_report.md  distill_report.md  docker-compose.infra.yml  docker-compose.sit.yml  docker-compose.yml  init.md  init_db.bat  init_db.ps1  package.json  rebuild_gateway.bat  requirements-dev.txt  requirements.txt  run_all_tests.py  test_config.yaml  test_im_complete.py  test_module_auth.py  test_module_file.py  test_module_gateway.py  test_module_group.py  test_module_im.py  test_module_message.py  test_module_user.py
backend/: .dockerignore  API.md  Cargo.toml  Dockerfile.native  pom.xml  start_all_services.ps1  stop_all_services.ps1
backend/admin-service/: pom.xml
backend/api-server-rs/: Cargo.toml  Dockerfile  split_auth_api.py
backend/api-server-rs/migrations/: 20260530_001_create_user_settings.sql  20260530_002_add_profile_fields.sql
backend/api-server-rs/src/: access_control.rs  auth.rs  auth_api.rs  auth_helpers.rs  auth_helpers_tests.rs  auth_internal.rs  auth_tests.rs  auth_token.rs  auth_types.rs  auth_ws.rs  background_publisher.rs  background_task.rs  background_writer.rs  config.rs  error.rs  file_api.rs  file_handlers.rs  file_helpers.rs  file_types.rs  id_resolver.rs  lib.rs  local_cache.rs  local_cache_tests.rs  main.rs  message.rs  observability.rs  push.rs  push_dispatcher.rs  push_handlers.rs  push_types.rs  redis_streams.rs  route.rs  social.rs  social_friends.rs  social_groups.rs  social_helpers.rs  social_helpers_tests.rs  social_types.rs  user.rs  user_handlers.rs  (+3 more)
backend/api-server-rs/src/ai/: api_key_handler.rs  auto_reply.rs  crypto.rs  internal_reply.rs  mod.rs  rag_handler.rs  settings_handler.rs  stream_bridge.rs  summary_handler.rs  task_bridge.rs
backend/api-server-rs/src/background_writer/: background_db.rs  mod.rs
backend/api-server-rs/src/config/: config_loader.rs  mod.rs
backend/api-server-rs/src/e2ee/: cleanup.rs  group_api.rs  key_api.rs  key_backup.rs  key_bundle.rs  key_device.rs  key_helpers.rs  key_tests.rs  key_types.rs  mod.rs  session_api.rs  session_crud.rs  session_helpers.rs  session_negotiation.rs  session_types.rs
backend/api-server-rs/src/message/: message_cache.rs  message_cache_tests.rs  message_conversation.rs  message_e2ee.rs  message_e2ee_tests.rs  message_helpers.rs  message_helpers_tests.rs  message_read.rs  message_redis.rs  message_send.rs  message_types.rs  mod.rs
backend/api-server-rs/src/moments/: cache.rs  interaction_handler.rs  mod.rs  notification_handler.rs  post_handler.rs
backend/api-server-rs/src/routes/: auth_routes.rs  e2ee_routes.rs  file_routes.rs  message_routes.rs  mod.rs  push_routes.rs  social_routes.rs  user_routes.rs
backend/api-server-rs/tests/: ai_integration.rs  auth_integration.rs  conversation_integration.rs  e2ee_group_integration.rs  e2ee_integration.rs  file_integration.rs  message_integration.rs  moments_integration.rs  push_integration.rs  route_existence.rs  settings_integration.rs  user_social_integration.rs
backend/auth-rs/: Cargo.toml  Dockerfile  README.md
backend/auth-rs/src/: config.rs  dto.rs  error.rs  jwt.rs  main.rs  security.rs  service.rs  web.rs
backend/auth-service/: Dockerfile  pom.xml
backend/common/: Cargo.toml  pom.xml
backend/common/src/: api_tests.rs  auth.rs  event.rs  ids.rs  ids_tests.rs  keys.rs  keys_tests.rs  lib.rs  moments.rs  time.rs  time_tests.rs
backend/docs/: ddd-feign-signature-diff.md
backend/e2ee-core/: Cargo.toml  README.md
backend/e2ee-core/src/: errors.rs  lib.rs  primitives.rs  ratchet.rs  state.rs  x3dh.rs
backend/e2ee-core/src/primitives/: mod.rs
backend/e2ee-core/src/ratchet/: mod.rs  tests.rs
backend/e2ee-core/src/x3dh/: mod.rs
backend/e2ee-core/tests/: full_e2ee_flow.rs
backend/e2ee-ffi/: Cargo.toml  build.rs
backend/e2ee-ffi/src/: e2ee_ffi.udl  ffi.rs  lib.rs  session.rs
backend/e2ee-ffi/src/session/: mod.rs  tests.rs
backend/e2ee-ffi/tests/: session_manager_test.rs
backend/e2ee-wasm/: Cargo.toml
backend/e2ee-wasm/src/: session.rs
backend/e2ee-wasm/tests/: wasm_session_test.rs
backend/file-service/: Dockerfile  pom.xml
backend/gateway/: Dockerfile  pom.xml
backend/group-service/: Dockerfile  pom.xml
backend/im-server/: Dockerfile  pom.xml
backend/im-server-rs/: Cargo.toml  Dockerfile
backend/im-server-rs/src/: clients.rs  config.rs  dto.rs  error.rs  kafka_consumer.rs  main.rs  route.rs  security.rs  service.rs  web.rs
backend/im-server-rs/src/service/: mod.rs  service_helpers.rs
backend/internal-client/: pom.xml
backend/log-service/: Dockerfile  pom.xml
backend/message-service/: Dockerfile  pom.xml
backend/persistence-common/: pom.xml
backend/registry-monitor/: Dockerfile  pom.xml
backend/scripts/: ddd-boundary-migration.sh  e2ee-ci-check.sh
backend/spring-ai/: Dockerfile  pom.xml
backend/sql/mysql8/: 20260417_upgrade_message_outbox_to_durable_schema.sql  init_all.sql
backend/user-service/: Dockerfile  pom.xml
flutter/native/rust/: Cargo.toml  build_wasm.sh  patch_wasm_js.py
flutter/native/rust/src/: frb_generated.rs
frontend/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
rust/: .dockerignore  .gitignore  Cargo.toml
rust/.cargo/: config.toml
rust/apps/admin-server/: Cargo.toml  Dockerfile
rust/apps/admin-server/src/: admin_auth.rs  error.rs  main.rs
rust/apps/api-server/: Cargo.toml  Dockerfile  split_generic.py
rust/apps/api-server/src/: access_control.rs  auth.rs  auth_helpers.rs  auth_helpers_tests.rs  auth_internal.rs  auth_tests.rs  error.rs  (+23 more)
rust/apps/im-server/: Cargo.toml  Dockerfile  README.md
rust/crates/im-common/: Cargo.toml
rust/crates/im-e2ee-core/: Cargo.toml  README.md
rust/crates/im-e2ee-ffi/: Cargo.toml  build.rs  uniffi.toml
rust/crates/im-e2ee-wasm/: Cargo.toml
rust/crates/im-flutter-bridge/: Cargo.toml  build_wasm.sh  flutter_rust_bridge.yaml  patch_wasm_js.py
(+2398 files in other folders)
