[workspace]
members = [
    "common",
    "api-server-rs",
    "im-server-rs",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
hmac = "0.12"
jsonwebtoken = "9"
mime_guess = "2"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
subtle = "2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
