[workspace]
members = [
    "crates/im-common",
    "crates/im-e2ee-core",
    "crates/im-e2ee-ffi",
    "crates/im-e2ee-wasm",
    "crates/im-flutter-bridge",
    "apps/api-server",
    "apps/im-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
bcrypt = "0.16"
bincode = "1.3"
camino = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
ed25519-dalek = "2"
flutter_rust_bridge = "=2.12.0"
futures-util = "0.3"
getrandom = "0.2"
hkdf = "0.12"
hmac = "0.12"
jsonwebtoken = "9"
log = "0.4"
lru = "0.11"
mime_guess = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
subtle = "2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uniffi = { version = "0.28", features = ["cli"] }
uniffi_bindgen = "0.28"
uuid = { version = "1", features = ["v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
