[package]
name = "im-rs-common"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
uuid.workspace = true

