# flutter/native/rust/Cargo.toml
[package]
name = "im-rust-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
e2ee-core = { path = "../../../backend/e2ee-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.28", features = ["bundled"] }
keyring = "2"
aes-gcm = "0.10"
zeroize = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lru = "0.11"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
