[package]
name = "im-admin-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
im-common = { path = "../../crates/im-common" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
