[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[lib]
name = "api_server_rs"

[features]
integration-tests = []

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
getrandom.workspace = true
futures-util.workspace = true
hmac.workspace = true
im-common = { path = "../../crates/im-common" }
jsonwebtoken.workspace = true
log.workspace = true
mime_guess.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
bcrypt.workspace = true

[dev-dependencies]
tower.workspace = true
