[package]
name = "im-e2ee-core"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
hkdf.workspace = true
hmac.workspace = true
rand_core.workspace = true
serde.workspace = true
bincode.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
