[package]
name = "im-e2ee-ffi"
version.workspace = true
edition.workspace = true

[lib]
name = "e2ee_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
im-e2ee-core = { path = "../im-e2ee-core" }
thiserror.workspace = true
uniffi.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
bincode.workspace = true
x25519-dalek.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
im-e2ee-core = { path = "../im-e2ee-core" }
serde_json.workspace = true
bincode.workspace = true
uniffi_bindgen.workspace = true
camino.workspace = true
