[package]
name = "im-flutter-bridge"
version.workspace = true
edition.workspace = true

[lib]
name = "im_rust_bridge"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["native"]
native = ["tokio", "reqwest", "rusqlite", "keyring", "tokio-tungstenite"]

[dependencies]
flutter_rust_bridge.workspace = true
im-e2ee-core = { path = "../im-e2ee-core" }
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
base64.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
rand_core.workspace = true
getrandom = { version = "0.2", features = ["js"] }
zeroize.workspace = true
uuid = { version = "1", features = ["v4", "js"] }
chrono.workspace = true
lru.workspace = true
futures-util.workspace = true

# Native-only dependencies (not compiled for WASM)
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
rusqlite = { workspace = true, optional = true }
keyring = { version = "2", optional = true }
tokio-tungstenite = { version = "0.20", features = ["native-tls"], optional = true }
