[package]
name = "im-flutter-bridge"
version.workspace = true
edition.workspace = true

[lib]
name = "im_rust_bridge"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge.workspace = true
im-e2ee-core = { path = "../im-e2ee-core" }
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
base64.workspace = true
sha2.workspace = true
getrandom = { version = "0.2", features = ["js"] }
